# bdbc-session-explorer

./: README.md  env.template.sh  setup.cfg  setup.py
bdbc_session_explorer/: __init__.py  core.py  dlc.py  env.py  find.py  mesoscaler.py  pupil.py  rawdata.py  session.py  videos.py
proc_mapper/: __init__.py  core.py  dlc.py  pupil.py  videos.py
session_explorer/: __init__.py  core.py  dlc.py  mesoscaler.py  pupil.py  rawdata.py  videos.py
