[metadata]
name = bdbc-proc-mapper
version = 0.1.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = maps raw data to individual procedures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gwappa/bdbc-proc-mapper
project_urls =
    Bug Tracker = https://github.com/gwappa/bdbc-proc-mapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    h5py
    bdbc-rawdata-explorer
    ks-pupilfitting

[flake8]
ignore =
    E501
    E221
    E712
