[metadata]
name = bdbc-session-explorer
version = 0.2.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = set of tools and procedures to iterate over, parse from, and work on the files for BraiDyn-BC project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-session-explorer
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-session-explorer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    h5py
    ks-pupilfitting

[flake8]
ignore =
    E501
    E221
    E712

